--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  padding: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,17 @@ img {
   align-items: center;;
   justify-content: center;
   background: #eee;
+}
+
+.plants {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.p1, .p2, .p3, .p4 {
+  padding: 52px;
+  text-align: center;
+  max-width: 200px;
 }
