--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,15 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
 
 img {
   width: 600px;
+  
 }
 
 button {
@@ -24,4 +29,44 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+  
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.right-links, .left-links{
+  padding: 8px
+
+}
+
+.footer{
+  background: #eee;
+
+}
+
+ul{
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding: 0;
+
+}
+
+a{
+  text-decoration: none;
+  color: darkgrey;
+  
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
 }
